k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list
  namespace: todo-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      containers:
      - name: todo-list
        image: teaminova/todo-list:latest
        ports:
        - containerPort: 8080
