k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list
  namespace: todo-namespace
spec:
  selector:
    app: todo-list
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
