k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-ingress
  namespace: todo-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: todolist.213004.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-list
            port:
              number: 80
  - host: localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-list
              port:
                number: 80
